fixed style and linter errors

--- a/src/azure-cli/azure/cli/command_modules/ams/tests/latest/recordings/test_ams_create_show.yaml
+++ b/src/azure-cli/azure/cli/command_modules/ams/tests/latest/recordings/test_ams_create_show.yaml
@@ -16,7 +16,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -n -g --storage-account -l --identity-system-assigned
+      - -n -g --storage-account -l --assign-identity
       User-Agent:
       - python/3.8.2 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-media/3.0.0 Azure-SDK-For-Python AZURECLI/2.18.0
@@ -27,21 +27,21 @@ interactions:
   response:
     body:
       string: "{\r\n  \"name\":\"ams000003\",\"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Media/mediaservices/ams000003\",\"type\":\"Microsoft.Media/mediaservices\",\"location\":\"Central
-        US\",\"properties\":{\r\n    \"mediaServiceId\":\"0185d5e8-20d8-4fa1-94a2-22b6094602a1\",\"storageAccounts\":[\r\n
+        US\",\"properties\":{\r\n    \"mediaServiceId\":\"b5721c6b-baf7-4b81-a961-36d4ff7cf716\",\"storageAccounts\":[\r\n
         \     {\r\n        \"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002\",\"type\":\"Primary\"\r\n
         \     }\r\n    ],\"storageAuthentication\":\"System\",\"encryption\":{\r\n
-        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"systemData\":{\r\n    \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T01:56:49.6144858Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T01:56:49.6144858Z\"\r\n
-        \ },\"identity\":{\r\n    \"type\":\"SystemAssigned\",\"principalId\":\"8d03bcfb-0c2a-47c4-a135-96e7ffc8ac35\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
+        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"systemData\":{\r\n    \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T02:24:12.696628Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T02:24:12.696628Z\"\r\n
+        \ },\"identity\":{\r\n    \"type\":\"SystemAssigned\",\"principalId\":\"a4bb3b39-10bf-4f31-a0b0-69d06b479f3f\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
         \ }\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '1139'
+      - '1137'
       content-type:
       - application/json; odata.metadata=minimal
       date:
-      - Tue, 23 Feb 2021 01:56:54 GMT
+      - Tue, 23 Feb 2021 02:24:19 GMT
       expires:
       - '-1'
       odata-version:
@@ -55,7 +55,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1199'
+      - '1197'
     status:
       code: 201
       message: Created
@@ -82,21 +82,21 @@ interactions:
   response:
     body:
       string: "{\r\n  \"name\":\"ams000003\",\"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Media/mediaservices/ams000003\",\"type\":\"Microsoft.Media/mediaservices\",\"location\":\"Central
-        US\",\"properties\":{\r\n    \"mediaServiceId\":\"0185d5e8-20d8-4fa1-94a2-22b6094602a1\",\"storageAccounts\":[\r\n
+        US\",\"properties\":{\r\n    \"mediaServiceId\":\"b5721c6b-baf7-4b81-a961-36d4ff7cf716\",\"storageAccounts\":[\r\n
         \     {\r\n        \"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002\",\"type\":\"Primary\"\r\n
         \     }\r\n    ],\"storageAuthentication\":\"System\",\"encryption\":{\r\n
-        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"systemData\":{\r\n    \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T01:56:49.6144858Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T01:56:49.6144858Z\"\r\n
-        \ },\"identity\":{\r\n    \"type\":\"SystemAssigned\",\"principalId\":\"8d03bcfb-0c2a-47c4-a135-96e7ffc8ac35\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
+        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"systemData\":{\r\n    \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T02:24:12.696628Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T02:24:12.696628Z\"\r\n
+        \ },\"identity\":{\r\n    \"type\":\"SystemAssigned\",\"principalId\":\"a4bb3b39-10bf-4f31-a0b0-69d06b479f3f\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
         \ }\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '1139'
+      - '1137'
       content-type:
       - application/json; odata.metadata=minimal
       date:
-      - Tue, 23 Feb 2021 01:56:55 GMT
+      - Tue, 23 Feb 2021 02:24:20 GMT
       expires:
       - '-1'
       odata-version:
@@ -146,21 +146,21 @@ interactions:
   response:
     body:
       string: "{\r\n  \"name\":\"ams000003\",\"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Media/mediaservices/ams000003\",\"type\":\"Microsoft.Media/mediaservices\",\"location\":\"Central
-        US\",\"tags\":{\r\n    \"key\":\"value\"\r\n  },\"properties\":{\r\n    \"mediaServiceId\":\"0185d5e8-20d8-4fa1-94a2-22b6094602a1\",\"storageAccounts\":[\r\n
+        US\",\"tags\":{\r\n    \"key\":\"value\"\r\n  },\"properties\":{\r\n    \"mediaServiceId\":\"b5721c6b-baf7-4b81-a961-36d4ff7cf716\",\"storageAccounts\":[\r\n
         \     {\r\n        \"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002\",\"type\":\"Primary\"\r\n
         \     }\r\n    ],\"storageAuthentication\":\"System\",\"encryption\":{\r\n
-        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"systemData\":{\r\n    \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T01:56:49.6144858Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T01:56:55.9834326Z\"\r\n
-        \ },\"identity\":{\r\n    \"type\":\"SystemAssigned\",\"principalId\":\"8d03bcfb-0c2a-47c4-a135-96e7ffc8ac35\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
+        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"systemData\":{\r\n    \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T02:24:12.696628Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T02:24:21.1713826Z\"\r\n
+        \ },\"identity\":{\r\n    \"type\":\"SystemAssigned\",\"principalId\":\"a4bb3b39-10bf-4f31-a0b0-69d06b479f3f\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
         \ }\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '1172'
+      - '1171'
       content-type:
       - application/json; odata.metadata=minimal
       date:
-      - Tue, 23 Feb 2021 01:56:57 GMT
+      - Tue, 23 Feb 2021 02:24:22 GMT
       expires:
       - '-1'
       odata-version:
@@ -206,22 +206,22 @@ interactions:
     body:
       string: "{\r\n  \"value\":[\r\n    {\r\n      \"name\":\"ams000003\",\"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Media/mediaservices/ams000003\",\"type\":\"Microsoft.Media/mediaservices\",\"location\":\"Central
         US\",\"tags\":{\r\n        \"key\":\"value\"\r\n      },\"properties\":{\r\n
-        \       \"mediaServiceId\":\"0185d5e8-20d8-4fa1-94a2-22b6094602a1\",\"storageAccounts\":[\r\n
+        \       \"mediaServiceId\":\"b5721c6b-baf7-4b81-a961-36d4ff7cf716\",\"storageAccounts\":[\r\n
         \         {\r\n            \"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002\",\"type\":\"Primary\"\r\n
         \         }\r\n        ],\"storageAuthentication\":\"System\",\"encryption\":{\r\n
         \         \"type\":\"SystemKey\"\r\n        }\r\n      },\"systemData\":{\r\n
-        \       \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T01:56:49.6144858Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T01:56:55.9834326Z\"\r\n
-        \     },\"identity\":{\r\n        \"type\":\"SystemAssigned\",\"principalId\":\"8d03bcfb-0c2a-47c4-a135-96e7ffc8ac35\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
+        \       \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T02:24:12.696628Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T02:24:21.1713826Z\"\r\n
+        \     },\"identity\":{\r\n        \"type\":\"SystemAssigned\",\"principalId\":\"a4bb3b39-10bf-4f31-a0b0-69d06b479f3f\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
         \     }\r\n    }\r\n  ]\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '1264'
+      - '1263'
       content-type:
       - application/json; odata.metadata=minimal
       date:
-      - Tue, 23 Feb 2021 01:56:57 GMT
+      - Tue, 23 Feb 2021 02:24:23 GMT
       expires:
       - '-1'
       odata-version:
@@ -264,21 +264,21 @@ interactions:
   response:
     body:
       string: "{\r\n  \"name\":\"ams000003\",\"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Media/mediaservices/ams000003\",\"type\":\"Microsoft.Media/mediaservices\",\"location\":\"Central
-        US\",\"tags\":{\r\n    \"key\":\"value\"\r\n  },\"properties\":{\r\n    \"mediaServiceId\":\"0185d5e8-20d8-4fa1-94a2-22b6094602a1\",\"storageAccounts\":[\r\n
+        US\",\"tags\":{\r\n    \"key\":\"value\"\r\n  },\"properties\":{\r\n    \"mediaServiceId\":\"b5721c6b-baf7-4b81-a961-36d4ff7cf716\",\"storageAccounts\":[\r\n
         \     {\r\n        \"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002\",\"type\":\"Primary\"\r\n
         \     }\r\n    ],\"storageAuthentication\":\"System\",\"encryption\":{\r\n
-        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"systemData\":{\r\n    \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T01:56:49.6144858Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T01:56:55.9834326Z\"\r\n
-        \ },\"identity\":{\r\n    \"type\":\"SystemAssigned\",\"principalId\":\"8d03bcfb-0c2a-47c4-a135-96e7ffc8ac35\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
+        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"systemData\":{\r\n    \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T02:24:12.696628Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T02:24:21.1713826Z\"\r\n
+        \ },\"identity\":{\r\n    \"type\":\"SystemAssigned\",\"principalId\":\"a4bb3b39-10bf-4f31-a0b0-69d06b479f3f\",\"tenantId\":\"72f988bf-86f1-41af-91ab-2d7cd011db47\"\r\n
         \ }\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '1172'
+      - '1171'
       content-type:
       - application/json; odata.metadata=minimal
       date:
-      - Tue, 23 Feb 2021 01:56:58 GMT
+      - Tue, 23 Feb 2021 02:24:22 GMT
       expires:
       - '-1'
       odata-version:
@@ -329,7 +329,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Tue, 23 Feb 2021 01:57:00 GMT
+      - Tue, 23 Feb 2021 02:24:25 GMT
       expires:
       - '-1'
       pragma:
@@ -341,7 +341,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-deletes:
-      - '14999'
+      - '14998'
     status:
       code: 200
       message: OK
