Manually remove access keys for deleted test resource from recordings

--- a/src/azure-cli/azure/cli/command_modules/redisenterprise/manual/tests/latest/recordings/test_redisenterprise_scenario1.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redisenterprise/manual/tests/latest/recordings/test_redisenterprise_scenario1.yaml
@@ -2604,7 +2604,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest-redisenterprise-rg1-000001/providers/Microsoft.Cache/redisEnterprise/clitest-cache1-000002/databases/default/listKeys?api-version=2021-03-01
   response:
     body:
-      string: "{\r\n  \"primaryKey\": \"AZczo172MKq9Qy645JQBo0Y+9hHLxikkVg4ycylhZD0=\"\
+      string: "{\r\n  \"primaryKey\": \"primary-access-key\"\
         \r\n}"
     headers:
       cache-control:
@@ -2659,8 +2659,8 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest-redisenterprise-rg1-000001/providers/Microsoft.Cache/redisEnterprise/clitest-cache1-000002/databases/default/regenerateKey?api-version=2021-03-01
   response:
     body:
-      string: "{\r\n  \"primaryKey\": \"Pw/t24GPTosp14ErwnQfUF+3R9P6IKkkStZ874UK+eI=\"\
-        ,\r\n  \"secondaryKey\": \"Pw/t24GPTosp14ErwnQfUF+3R9P6IKkkStZ874UK+eI=\"\r\
+      string: "{\r\n  \"primaryKey\": \"new-primary-access-key\"\
+        ,\r\n  \"secondaryKey\": \"secondary-access-key\"\r\
         \n}"
     headers:
       cache-control:
