--- a/src/azure-cli/azure/cli/command_modules/redisenterprise/manual/tests/latest/recordings/test_redisenterprise_scenario2.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redisenterprise/manual/tests/latest/recordings/test_redisenterprise_scenario2.yaml
@@ -1940,7 +1940,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest-redisenterprise-rg2-000001/providers/Microsoft.Cache/redisEnterprise/clitest-cache2-000002/databases/default/listKeys?api-version=2021-03-01
   response:
     body:
-      string: "{\r\n  \"primaryKey\": \"CQoJmVAfqAS+PCMWr6wf5h8UWYw+37B4Z0HEH530WLI=\"\
+      string: "{\r\n  \"primaryKey\": \"primary-access-key\"\
         \r\n}"
     headers:
       cache-control:
@@ -1995,8 +1995,8 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest-redisenterprise-rg2-000001/providers/Microsoft.Cache/redisEnterprise/clitest-cache2-000002/databases/default/regenerateKey?api-version=2021-03-01
   response:
     body:
-      string: "{\r\n  \"primaryKey\": \"W6wWbXdh05DjscNTgP8rJYDxSSeFlj2T3G74VuNhdH4=\"\
-        ,\r\n  \"secondaryKey\": \"W6wWbXdh05DjscNTgP8rJYDxSSeFlj2T3G74VuNhdH4=\"\r\
+      string: "{\r\n  \"primaryKey\": \"new-primary-access-key\"\
+        ,\r\n  \"secondaryKey\": \"secondary-access-key\"\r\
         \n}"
     headers:
       cache-control:
