--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -25,7 +25,7 @@
 /src/azure-cli/azure/cli/command_modules/cloud/ @jiasli @fengzhou-msft @Juliehzl
 /src/azure-cli/azure/cli/command_modules/consumption/ @sandeepnl
 /src/azure-cli/azure/cli/command_modules/container/ @zhoxing-ms @fengzhou-msft
-/src/azure-cli/azure/cli/command_modules/cosmosdb/ @dmakwana
+/src/azure-cli/azure/cli/command_modules/cosmosdb/ @dmakwana @kristynhamasaki @Juliehzl
 /src/azure-cli/azure/cli/command_modules/databoxedge/ @evelyn-ys @Juliehzl
 /src/azure-cli/azure/cli/command_modules/dls/ @akharit @rahuldutta90 @Juliehzl @jsntcy
 /src/azure-cli/azure/cli/command_modules/dms/ @temandr @binuj
