--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -105,12 +105,13 @@ jsmin==2.2.2
 knack==0.8.0rc2
 MarkupSafe==1.1.1
 mock==4.0.2
+msal==1.9.0
 msrest==0.6.21
 msrestazure==0.6.3
 oauthlib==3.0.1
 paramiko==2.6.0
 pbr==5.3.1
-portalocker==1.2.1
+portalocker==1.7.1
 psutil==5.7.2
 pycparser==2.19
 PyJWT==1.7.1
